# light-ml-platform

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  requirements-docs.txt  sitemap.xml
.github/workflows/: docs.yml  kitchen-ci.yml  ml-pipeline.yml  pipeline-ci.yml  publish.yml  recipes-ci.yml
docs/: index.md
docs/kitchen/: index.md  model-serving.md  monitoring.md  orchestration.md  quickstart.md
docs/pipeline/: data-versioning.md  experiment-tracking.md  index.md  model-serving.md  monitoring.md  orchestration.md  quickstart.md
docs/recipes/: ci-cd.md  index.md  quickstart.md  yaml-spec.md
kitchen/: dvc.yaml  index.html  infra.yaml  mlflow.db  params.yaml  pyproject.toml
kitchen/data-versioning/: index.html
kitchen/experiment-tracking/: index.html
kitchen/flows/: monitor_flow.py  train_flow.py
kitchen/kitchen/: __init__.py  cli.py  config.py  evaluate.py  experiment.py  monitoring.py  registry.py  steps.py  store.py  tracking.py
kitchen/kitchen/flows/: monitor_flow.py  train_flow.py
kitchen/kitchen/ingest/: __init__.py  run.py
kitchen/kitchen/serve/: Dockerfile  app.py
kitchen/model-serving/: index.html
kitchen/monitoring/: index.html
kitchen/orchestration/: index.html
kitchen/quickstart/: index.html
kitchen/tests/: conftest.py  test_check.py  test_cli.py  test_config.py  test_evaluate.py  test_experiment.py  test_experiments.py  test_ingest.py  test_ingest_cmd.py  test_monitor_flow.py  test_monitoring.py  test_registry.py  test_serve.py  test_steps.py  test_store.py  test_tracking.py
pipeline/: dvc.yaml  infra.yaml  params.yaml  pyproject.toml
pipeline/src/serve/: Dockerfile  app.py
pipeline/tests/: test_serve.py
recipes/: index.html  pyproject.toml
recipes/ci-cd/: index.html
recipes/examples/: lambda-api.yaml
recipes/quickstart/: index.html
recipes/recipes/: cli.py  schema.py
recipes/recipes/generators/: __init__.py  ecr.py  iam.py  lambda_.py  s3.py
recipes/recipes/templates/: ecr.tf.j2  iam_role.tf.j2  lambda.tf.j2  provider.tf.j2  s3.tf.j2
recipes/tests/: test_cli.py  test_generators.py  test_schema.py
recipes/yaml-spec/: index.html
search/: search_index.json
