[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pipeline"
version = "0.1.0"
description = "End-to-end MLOps pipeline for healthcare tabular data"
requires-python = ">=3.11"
dependencies = [
    # Data
    "dvc[s3]>=3.0",
    "pandas>=2.0",
    "pyarrow>=14.0",
    # ML
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    # Experiment tracking
    "mlflow>=2.10",
    "boto3>=1.34",
    # Serving
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "mangum>=0.17",         # FastAPI adapter for Lambda
    # Monitoring
    "evidently>=0.4",
    # Orchestration
    "prefect>=2.19",
]

[tool.hatch.envs.default]
dependencies = [
    "pytest>=8.0",
    "pytest-cov",
    "httpx",               # FastAPI test client
    "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py311"
